templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:666579094788:certificate/cdd336d9-513c-48b8-8865-02190c060bc0
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}, {"HTTP":2345},{"HTTP":2346}]'
    alb.ingress.kubernetes.io/target-type: ip
    #field.cattle.io/publicEndpoints: '[{"addresses":[""],"port":80,"protocol":"HTTP","serviceName":"ps-ci:weit-ifm","ingressName":"ps-ci:weit-ifm-ing","hostname":"weit-ifm.ps.actimize.services","path":"/*","allNodes":false}]'
    #kubectl.kubernetes.io/last-applied-configuration: |
    #  {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"alb","meta.helm.sh/release-name":"weit-ifm","meta.helm.sh/release-namespace":"ps-ci"},"labels":{"app":"weit-ifm","app.kubernetes.io/managed-by":"Helm","chart":"weit-ifm-1.4.0.1.14","heritage":"Helm","release":"weit-ifm"},"name":"weit-ifm-ing","namespace":"ps-ci"},"spec":{"rules":[{"host":"weit-ifm.ps.actimize.services","http":{"paths":[{"backend":{"service":{"name":"weit-ifm","p [...]
    kubernetes.io/ingress.class: alb
    meta.helm.sh/release-name: {{ .Release.Name }}
    meta.helm.sh/release-namespace: {{ .Release.Namespace }}
    alb.ingress.kubernetes.io/tags: Name=weit_ifm,cost-center=International,bu-owner=Roman_Vallo,Account=Actimize-EMEA-PS,Solution=Core_Services,map-migrated=migZY49H4HO3T,Requester=Jyotiram_Mote,Client=ps,Purpose=model_deployment,Project=psdevops,LoB=Multiple
  creationTimestamp: "2021-10-28T06:43:55Z"
  finalizers:
  - ingress.k8s.aws/resources
  generation: 1
  labels:
    app: weit-ifm
    app.kubernetes.io/managed-by: Helm
    chart: weit-ifm-1.4.0.1.14
    heritage: Helm
    release: weit-ifm
    Name: weit_ifm
    cost-center: International
    bu-owner: Roman_Vallo
    Account: Actimize-EMEA-PS
    Solution: Core_Services
    map-migrated: migZY49H4HO3T
    Requester: Jyotiram_Mote
    Client: ps
    Purpose: model_deployment
    Project: psdevops
    LoB: Multiple
  managedFields:
  - apiVersion: networking.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:kubernetes.io/ingress.class: {}
          f:meta.helm.sh/release-name: {}
          f:meta.helm.sh/release-namespace: {}
        f:labels:
          .: {}
          f:app: {}
          f:app.kubernetes.io/managed-by: {}
          f:chart: {}
          f:heritage: {}
          f:release: {}
      f:spec:
        f:rules: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2021-10-28T06:43:55Z"
  - apiVersion: networking.k8s.io/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:finalizers:
          .: {}
          v:"ingress.k8s.aws/resources": {}
      f:status:
        f:loadBalancer:
          f:ingress: {}
    manager: controller
    operation: Update
    time: "2021-10-28T06:49:35Z"
  - apiVersion: extensions/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:field.cattle.io/publicEndpoints: {}
    manager: rancher
    operation: Update
    time: "2021-10-28T06:49:35Z"
  - apiVersion: networking.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:alb.ingress.kubernetes.io/certificate-arn: {}
          f:alb.ingress.kubernetes.io/listen-ports: {}
          f:alb.ingress.kubernetes.io/target-type: {}
    manager: kubectl-edit
    operation: Update
    time: "2021-10-28T06:57:45Z"
  name: weit-ifm-ing
  namespace: {{ .Release.Namespace }}
  resourceVersion: "19560525"
  uid: 6f3a49be-b02d-4f76-92e0-6c01627a72a7
spec:
  
  rules:
  - host: weit-ifm.ps.actimize.services
    http:
      paths:
      - backend:
          service:
            name: weit-ifm
            port:
              number: 8080
        path: /*
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
#    - hostname: internal-k8s-ifmperf-odckdmod-5294e7cdac-444860785.us-east-1.elb.amazonaws.com
